--- a/src/app/left-bar/left-bar.component.scss
+++ b/src/app/left-bar/left-bar.component.scss
@@ -73,7 +73,7 @@
     padding-bottom: 10px;
     background: #0000000d;
     border-radius: 20px;
-    z-index: 1000;
+    z-index: 95;
     hr {
         background-color: #D8D8D8;
         height: 1px;
